Made the path for the seed file relative

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,3 +1,14 @@
-<h1>Welcome <%= current_user.username %> </h1>
-
-<a href="/logout">Logout</a>
+<def class="containter">
+	<def class="top_nav"><% erb :top_nav %></def>
+	<def class="main">
+		<h1><%= @header %></h1>
+		<def class="game">
+			<p>game content goes here!!</p>
+			<p>game content goes here!!</p>
+			<p>game content goes here!!</p>
+			<p>game content goes here!!</p>
+			<p>game content goes here!!</p>
+		</def>
+	</def>
+	<def class="footer"><% erb :footer %></def>
+</def>
