--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,11 +1,10 @@
 <div class="login">
   <% if @error_message %>
-  <%= @error_message %>
+  	<span class="error"><%= @error_message %></span>
   <% end %>
   <form action="/login" method="post">
     <input type="text" name="username" placeholder="Username">
     <input type="password" name="password" placeholder="Password">
     <input type="submit" value="Log in">
   </form>
-  <a href="/register">Register!</a>
 </div>
