--- a/app/views/top_nav.erb
+++ b/app/views/top_nav.erb
@@ -4,8 +4,8 @@
 		<li class="nav_item"><a href="/stats">Stats</a></li>
 	</ul>
 	<ul id="nav_user">
-		<li class="nav_user"><a id="logout" href="/logout">Log out</a></li>
-		<li class="nav_user"><a id="user" href="/profile"><%= current_user.username.capitalize %></a></li>
+		<li class="nav_user"><a href="/logout">Log out</a></li>
+		<li class="nav_user"><a href="/profile"><%= current_user.username.capitalize %></a></li>
 	</ul>
 <% else %>
 	<ul id="nav_login">
