--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,12 +15,18 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/js/application.js"></script>
     
+    <% if @title %>
     <title><%= @title.capitalize %></title>
+    <% end %>
   </head>
   <body class="rainbow_background">
     <div class="container">
       <div class="top_nav"><%= erb :top_nav %></div>
-      <div class="content"><h1 id="header"><%= @header.capitalize %></h1><%= yield %></div>
+      <div class="content"><h1 id="header">
+        <% if @title %>
+          <%= @header.capitalize %>
+        <% end %>
+      </h1><%= yield %></div>
       <div class="footer"><%= erb :footer %></div>
     </div>
   </body>
