Require user to be logged in, and updating the user to be able to have multiple games

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,5 +1,5 @@
 <div class="game">
 	<% @decks.each do |deck| %>
-	<a href="/round/<%= deck.id %>/new"><%= deck.name %></a>
+	<a href="/round/<%= deck.id %>/rounds"><%= deck.name %></a>
 	<% end %>
 </div>
