--- a/app/views/top_nav.erb
+++ b/app/views/top_nav.erb
@@ -10,7 +10,7 @@
 <% else %>
 	<ul id="nav_login">
 		<li><a class="nav_login" href="/login">Log In</a></li>
-		<li><a class="nav_login"href="/register">Register!</a></li>
+		<li><a class="nav_login"href="/register">Register</a></li>
 	</ul>
 <% end %>
 
